refactor: implement comprehensive security and exception handling
- Add file validation service with size, type, and content validation
- Create centralized exception handling with GlobalExceptionHandler
- Reorganize DTO structure into request/response folders
- Replace MinioServiceException with dedicated StorageException
- Add magic number validation for file type verification
- Sanitize filenames to prevent path traversal attacks
- Configure file upload limits and allowed MIME types
- Ensure all response DTOs include ID fields for consistency

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>