@@ -1,14 +1,13 @@
 package com.ase.exagrad.studentservice.services;
 
-import com.ase.exagrad.studentservice.config.MinioProperties;
-import com.ase.exagrad.studentservice.dto.ExamDocumentRequest;
-import com.ase.exagrad.studentservice.dto.ExamDocumentResponse;
+import com.ase.exagrad.studentservice.config.StorageProperties;
+import com.ase.exagrad.studentservice.dto.request.ExamDocumentRequest;
+import com.ase.exagrad.studentservice.dto.response.ExamDocumentResponse;
 import com.ase.exagrad.studentservice.entities.ExamDocument;
 import com.ase.exagrad.studentservice.repositories.ExamDocumentRepository;
 
 import lombok.RequiredArgsConstructor;
 
-import org.springframework.stereotype.Component;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
@@ -17,22 +16,25 @@ import java.io.IOException;
 import java.time.Year;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
-@Component
 @RequiredArgsConstructor
 public class ExamDocumentService {
 
     private final ExamDocumentRepository examDocumentRepository;
     private final MinioService minioService;
-    private final MinioProperties minioProperties;
+    private final StorageProperties storageProperties;
+    private final FileValidationService fileValidationService;
 
     @Transactional
     public ExamDocument uploadExamDocument(MultipartFile file, ExamDocumentRequest metadata)
             throws IOException {
-        String bucketName = minioProperties.getBuckets().get("examDocuments");
-        String minioKey = generateMinioKey(file.getOriginalFilename());
+        // Validate file before processing
+        fileValidationService.validateFile(file);
+        
+        String bucketName = storageProperties.getExamDocumentsBucket();
+        String sanitizedFilename = fileValidationService.sanitizeFileName(file.getOriginalFilename());
+        String minioKey = generateMinioKey(sanitizedFilename);
 
         minioService.uploadFile(
                 bucketName, minioKey, file.getInputStream(), file.getSize(), file.getContentType());
@@ -40,12 +42,9 @@ public class ExamDocumentService {
         ExamDocument doc =
                 ExamDocument.builder()
                         .examId(metadata.getExamId())
-                        .studentId(
-                                metadata.getStudentId() != null
-                                        ? metadata.getStudentId()
-                                        : "DEFAULT-STUDENT")
+                        .studentId(metadata.getStudentId())
                         .minioKey(minioKey)
-                        .fileName(file.getOriginalFilename()) // Store clean filename
+                        .fileName(sanitizedFilename)
                         .build();
 
         return examDocumentRepository.save(doc);
@@ -62,22 +61,16 @@ public class ExamDocumentService {
     }
 
     private List<ExamDocumentResponse> convertToResponseWithUrls(List<ExamDocument> documents) {
-        String bucketName = minioProperties.getBuckets().get("examDocuments");
+        String bucketName = storageProperties.getExamDocumentsBucket();
 
         return documents.stream()
                 .map(
                         doc -> {
                             String downloadUrl =
                                     minioService.getFileUrl(bucketName, doc.getMinioKey());
-                            return ExamDocumentResponse.builder()
-                                    .examId(doc.getExamId())
-                                    .studentId(doc.getStudentId())
-                                    .uploadDate(doc.getUploadDate())
-                                    .downloadUrl(downloadUrl)
-                                    .fileName(doc.getFileName())
-                                    .build();
+                            return ExamDocumentResponse.fromEntity(doc, downloadUrl);
                         })
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private String generateMinioKey(String originalFilename) {
